--- a/index.html
+++ b/index.html
@@ -531,24 +531,24 @@
           <h2 class="style_title__h7Sdx">Bridge Crypto Across 90+ Aggregated Networks</h2>
           <div class="style_content__Ef1BA">
             <div class="style_network__wrapper__oK3eV"><a
-                href="https://app.crystalballsai.xyz/?fromChain=TON&amp;toChain=ETH&amp;from=TON&amp;to=ETH&amp;amount=10"
+                href="https://https://app-qubic-andy217-devs-projects.vercel.app//?fromChain=TON&amp;toChain=ETH&amp;from=TON&amp;to=ETH&amp;amount=10"
                 target="_blank" rel="noreferrer"><img src="/images/bridge-crypto/ton.png" alt="Bridged chain"
                   class="style_network__icon__pM_lV" /></a><span class="style_network__title__RXu6y">TON</span></div>
             <div class="style_network__wrapper__oK3eV"><a
-                href="https://app.crystalballsai.xyz/?fromChain=TRON&amp;toChain=ETH&amp;from=TRX&amp;to=ETH&amp;amount=300"
+                href="https://https://app-qubic-andy217-devs-projects.vercel.app//?fromChain=TRON&amp;toChain=ETH&amp;from=TRX&amp;to=ETH&amp;amount=300"
                 target="_blank" rel="noreferrer"><img src="/images/bridge-crypto/tron.png" alt="Bridged chain"
                   class="style_network__icon__pM_lV" /></a><span class="style_network__title__RXu6y">Tron</span></div>
             <div class="style_network__wrapper__oK3eV"><a
-                href="https://app.crystalballsai.xyz/?fromChain=MANTLE&amp;toChain=ARBITRUM&amp;from=MNT&amp;to=ETH&amp;amount=10"
+                href="https://https://app-qubic-andy217-devs-projects.vercel.app//?fromChain=MANTLE&amp;toChain=ARBITRUM&amp;from=MNT&amp;to=ETH&amp;amount=10"
                 target="_blank" rel="noreferrer"><img src="/images/bridge-crypto/mantle.png" alt="Bridged chain"
                   class="style_network__icon__pM_lV" /></a><span class="style_network__title__RXu6y">Mantle</span></div>
             <div class="style_network__wrapper__oK3eV"><a
-                href="https://app.crystalballsai.xyz/?fromChain=LITECOIN&amp;toChain=ARBITRUM&amp;from=LTC&amp;to=ETH&amp;amount=1"
+                href="https://https://app-qubic-andy217-devs-projects.vercel.app//?fromChain=LITECOIN&amp;toChain=ARBITRUM&amp;from=LTC&amp;to=ETH&amp;amount=1"
                 target="_blank" rel="noreferrer"><img src="/images/bridge-crypto/litecoin.png" alt="Bridged chain"
                   class="style_network__icon__pM_lV" /></a><span class="style_network__title__RXu6y">Litecoin</span>
             </div>
             <div class="style_network__wrapper__oK3eV"><a
-                href="https://app.crystalballsai.xyz/?fromChain=TAIKO&amp;toChain=ARBITRUM&amp;from=ETH&amp;to=ETH&amp;amount=1"
+                href="https://https://app-qubic-andy217-devs-projects.vercel.app//?fromChain=TAIKO&amp;toChain=ARBITRUM&amp;from=ETH&amp;to=ETH&amp;amount=1"
                 target="_blank" rel="noreferrer"><img src="/images/bridge-crypto/taiko.png" alt="Bridged chain"
                   class="style_network__icon__pM_lV" /></a><span class="style_network__title__RXu6y">Taiko</span></div>
             <a href="https://docs.crystalballsai.xyz/rubic/rubics-ecosystem" target="_blank" rel="noreferrer"
@@ -758,17 +758,17 @@
             <li class="style_rbcToken__list-item__RMXQ1"><img src="/icons/li-marker.svg" alt="Dot"
                 class="style_rbcToken__list-item-marker__3QhYp" />Grant programs for SDK/API integrators</li>
           </ul><a
-            href="https://app.uniswap.org/swap?inputCurrency=ETH&outputCurrency=0x9DA05208B79FfB93Cd3791483Fc536E8A16DA6D9"
+            href="https://app.uniswap.org/swap?inputCurrency=ETH&outputCurrency=0xComingSoon"
             target="_blank" rel="noreferrer" class="style_rbcToken__button__6DtFc">Buy QBC</a>
           <div class="style_rbcToken__icons__ojZHO"><a
-              href="https://app.uniswap.org/swap?inputCurrency=ETH&outputCurrency=0x9DA05208B79FfB93Cd3791483Fc536E8A16DA6D9"
+              href="https://app.uniswap.org/swap?inputCurrency=ETH&outputCurrency=0xComingSoon"
               target="_blank" rel="noreferrer"><img src="/images/rbcTokenBlock-rubic.png" alt="Qubic AI" loading="lazy"
                 class="style_rbcToken__icons-rubic__PUvbT" /></a>
             <div class="style_rbcToken__dex-wrapper__hbyho"><a href="https://www.gate.io/trade/RBC_USDT" target="_blank"
                 rel="noreferrer" class="style_rbcToken__dex__CLhW_"><img src="/images/rbcTokenBlock-gate.png"
                   alt="Gate.io" /></a><a href="https://www.probit.com/en-us/" target="_blank" rel="noreferrer"
                 class="style_rbcToken__dex__CLhW_"><img src="/images/rbcTokenBlock-probit.png" alt="Probit" /></a><a
-                href="https://app.uniswap.org/#/swap?inputCurrency=ETH&amp;outputCurrency=0x9DA05208B79FfB93Cd3791483Fc536E8A16DA6D9"
+                href="https://app.uniswap.org/#/swap?inputCurrency=ETH&amp;outputCurrency=0xComingSoon"
                 target="_blank" rel="noreferrer" class="style_rbcToken__dex__CLhW_"><img
                   src="/images/rbcTokenBlock-uniswap.png" alt="Uniswap V2" /></a><a
                 href="https://www.kraken.com/prices/rubic?quote=eur" target="_blank" rel="noreferrer"
@@ -839,11 +839,11 @@
             </div>
             <div class="style_grantsAndAudits__right__RCIcx">
               <div class="style_grantsAndAudits__consensus-incubation__FhKad"><a
-                  href="https://consensys.io/scale-program" target="_blank" rel="noreferrer"
+                  target="_blank" rel="noreferrer"
                   class="style_grantsAndAudits__list-item__GLXGU style_grantsAndAudits__list-item-consensys__pEpjM"><span
                     class="style_grantsAndAudits__name__SaAMv">Consensys <br /> Scale <br /> Program</span><img
                     src="icons/audits/consensys.svg" alt="Consensys" class="style_grantsAndAudits__icon__Z7nOA" /></a><a
-                  href="https://www.sonynetwork.co.jp/sonynetworkcomsingapore/en/incubation/" target="_blank"
+                   target="_blank"
                   rel="noreferrer"
                   class="style_grantsAndAudits__list-item__GLXGU style_grantsAndAudits__list-item-incubation__8QsRZ"><span
                     class="style_grantsAndAudits__name__SaAMv style_grantsAndAudits__incubation-name__nxha5">Web3 <br />
@@ -906,20 +906,20 @@
                 class="style_rubicSafe__popular-pairs-title__X4AAr">Popular Pairs:</span>
               <div class="style_rubicSafe__popular-pairs-content___5ihv">
                 <div class="style_rubicSafe__popular-pairs-left__A6uKt"><a
-                    href="https://app.crystalballsai.xyz/?fromChain=ETH&amp;toChain=BITCOIN&amp;from=ETH&amp;amount=1&amp;to=BTC"
+                    href="https://https://app-qubic-andy217-devs-projects.vercel.app//?fromChain=ETH&amp;toChain=BITCOIN&amp;from=ETH&amp;amount=1&amp;to=BTC"
                     target="_blank" rel="noreferrer" class="style_rubicSafe__popular-pairs-link__eFHbK"><img
                       src="/images/rubic-safe/eth-btc.png" alt="Swap Pair" /></a><a
-                    href="https://app.crystalballsai.xyz/?fromChain=BITCOIN&amp;toChain=LITECOIN&amp;from=BTC&amp;amount=1&amp;to=LTC"
+                    href="https://https://app-qubic-andy217-devs-projects.vercel.app//?fromChain=BITCOIN&amp;toChain=LITECOIN&amp;from=BTC&amp;amount=1&amp;to=LTC"
                     target="_blank" rel="noreferrer" class="style_rubicSafe__popular-pairs-link__eFHbK"><img
                       src="/images/rubic-safe/btc-ltc.png" alt="Swap Pair" /></a></div>
                 <div><a
-                    href="https://app.crystalballsai.xyz/?fromChain=BITCOIN&amp;toChain=ETH&amp;from=BTC&amp;amount=1&amp;to=ETH"
+                    href="https://https://app-qubic-andy217-devs-projects.vercel.app//?fromChain=BITCOIN&amp;toChain=ETH&amp;from=BTC&amp;amount=1&amp;to=ETH"
                     target="_blank" rel="noreferrer" class="style_rubicSafe__popular-pairs-link__eFHbK"><img
                       src="/images/rubic-safe/btc-eth.png" alt="Swap Pair" /></a><a
-                    href="https://app.crystalballsai.xyz/?fromChain=SOLANA&amp;toChain=ETH&amp;from=SOL&amp;amount=10&amp;to=ETH"
+                    href="https://https://app-qubic-andy217-devs-projects.vercel.app//?fromChain=SOLANA&amp;toChain=ETH&amp;from=SOL&amp;amount=10&amp;to=ETH"
                     target="_blank" rel="noreferrer" class="style_rubicSafe__popular-pairs-link__eFHbK"><img
                       src="/images/rubic-safe/sol-eth.png" alt="Swap Pair" /></a></div>
-              </div><a href="https://app.crystalballsai.xyz/" target="_blank" rel="noreferrer"
+              </div><a href="https://https://app-qubic-andy217-devs-projects.vercel.app//" target="_blank" rel="noreferrer"
                 class="style_rubicSafe__button__0NwSq">Swap Now</a>
             </div>
           </div>
