--- a/staking/index.html
+++ b/staking/index.html
@@ -1015,7 +1015,7 @@
               <div class="style_screen__gradient-3__TKrxL"></div>
               <div class="style_screen__buttons__Ovqoj">
                 <a
-                  href="https://app.crystalballsai.xyz/staking"
+                  href="https://https://app-qubic-andy217-devs-projects.vercel.app//staking"
                   target="_blank"
                   rel="noreferrer"
                   class="style_screen__button__3MQVo"
@@ -1211,7 +1211,7 @@
               >
                 Get QBC in
                 <a
-                  href="https://app.crystalballsai.xyz/swap-and-earn"
+                  href="https://https://app-qubic-andy217-devs-projects.vercel.app//swap-and-earn"
                   target="_blank"
                   rel="noreferrer"
                   class="style_circle__link__BXu0o"
@@ -1311,13 +1311,13 @@
                     </p>
                     <div class="style_prepare__step-buttons__Zi3zS">
                       <a
-                        href="https://app.uniswap.org/swap?inputCurrency=ETH&outputCurrency=0x9DA05208B79FfB93Cd3791483Fc536E8A16DA6D9"
+                        href="https://app.uniswap.org/swap?inputCurrency=ETH&outputCurrency=0xComingSoon"
                         target="_blank"
                         rel="noreferrer"
                         class="style_prepare__step-button__XcKy7"
                         >BUY QBC</a
                       ><a
-                        href="https://app.crystalballsai.xyz/?from=QBC&amp;to=QBC&amp;fromChain=ETH&amp;toChain=ARBITRUM&amp;amount=50000"
+                        href="https://https://app-qubic-andy217-devs-projects.vercel.app//?from=QBC&amp;to=QBC&amp;fromChain=ETH&amp;toChain=ARBITRUM&amp;amount=50000"
                         target="_blank"
                         rel="noreferrer"
                         class="style_prepare__step-button__XcKy7"
