--- a/index.html
+++ b/index.html
@@ -531,24 +531,24 @@
           <h2 class="style_title__h7Sdx">Bridge Crypto Across 90+ Aggregated Networks</h2>
           <div class="style_content__Ef1BA">
             <div class="style_network__wrapper__oK3eV"><a
-                href="https://https://app-qubic-andy217-devs-projects.vercel.app//?fromChain=TON&amp;toChain=ETH&amp;from=TON&amp;to=ETH&amp;amount=10"
+                href="https://app-qubic-andy217-devs-projects.vercel.app/?fromChain=TON&amp;toChain=ETH&amp;from=TON&amp;to=ETH&amp;amount=10"
                 target="_blank" rel="noreferrer"><img src="/images/bridge-crypto/ton.png" alt="Bridged chain"
                   class="style_network__icon__pM_lV" /></a><span class="style_network__title__RXu6y">TON</span></div>
             <div class="style_network__wrapper__oK3eV"><a
-                href="https://https://app-qubic-andy217-devs-projects.vercel.app//?fromChain=TRON&amp;toChain=ETH&amp;from=TRX&amp;to=ETH&amp;amount=300"
+                href="https://app-qubic-andy217-devs-projects.vercel.app/?fromChain=TRON&amp;toChain=ETH&amp;from=TRX&amp;to=ETH&amp;amount=300"
                 target="_blank" rel="noreferrer"><img src="/images/bridge-crypto/tron.png" alt="Bridged chain"
                   class="style_network__icon__pM_lV" /></a><span class="style_network__title__RXu6y">Tron</span></div>
             <div class="style_network__wrapper__oK3eV"><a
-                href="https://https://app-qubic-andy217-devs-projects.vercel.app//?fromChain=MANTLE&amp;toChain=ARBITRUM&amp;from=MNT&amp;to=ETH&amp;amount=10"
+                href="https://app-qubic-andy217-devs-projects.vercel.app/?fromChain=MANTLE&amp;toChain=ARBITRUM&amp;from=MNT&amp;to=ETH&amp;amount=10"
                 target="_blank" rel="noreferrer"><img src="/images/bridge-crypto/mantle.png" alt="Bridged chain"
                   class="style_network__icon__pM_lV" /></a><span class="style_network__title__RXu6y">Mantle</span></div>
             <div class="style_network__wrapper__oK3eV"><a
-                href="https://https://app-qubic-andy217-devs-projects.vercel.app//?fromChain=LITECOIN&amp;toChain=ARBITRUM&amp;from=LTC&amp;to=ETH&amp;amount=1"
+                href="https://app-qubic-andy217-devs-projects.vercel.app/?fromChain=LITECOIN&amp;toChain=ARBITRUM&amp;from=LTC&amp;to=ETH&amp;amount=1"
                 target="_blank" rel="noreferrer"><img src="/images/bridge-crypto/litecoin.png" alt="Bridged chain"
                   class="style_network__icon__pM_lV" /></a><span class="style_network__title__RXu6y">Litecoin</span>
             </div>
             <div class="style_network__wrapper__oK3eV"><a
-                href="https://https://app-qubic-andy217-devs-projects.vercel.app//?fromChain=TAIKO&amp;toChain=ARBITRUM&amp;from=ETH&amp;to=ETH&amp;amount=1"
+                href="https://app-qubic-andy217-devs-projects.vercel.app/?fromChain=TAIKO&amp;toChain=ARBITRUM&amp;from=ETH&amp;to=ETH&amp;amount=1"
                 target="_blank" rel="noreferrer"><img src="/images/bridge-crypto/taiko.png" alt="Bridged chain"
                   class="style_network__icon__pM_lV" /></a><span class="style_network__title__RXu6y">Taiko</span></div>
             <a href="https://docs.crystalballsai.xyz/rubic/rubics-ecosystem" target="_blank" rel="noreferrer"
@@ -906,20 +906,20 @@
                 class="style_rubicSafe__popular-pairs-title__X4AAr">Popular Pairs:</span>
               <div class="style_rubicSafe__popular-pairs-content___5ihv">
                 <div class="style_rubicSafe__popular-pairs-left__A6uKt"><a
-                    href="https://https://app-qubic-andy217-devs-projects.vercel.app//?fromChain=ETH&amp;toChain=BITCOIN&amp;from=ETH&amp;amount=1&amp;to=BTC"
+                    href="https://app-qubic-andy217-devs-projects.vercel.app/?fromChain=ETH&amp;toChain=BITCOIN&amp;from=ETH&amp;amount=1&amp;to=BTC"
                     target="_blank" rel="noreferrer" class="style_rubicSafe__popular-pairs-link__eFHbK"><img
                       src="/images/rubic-safe/eth-btc.png" alt="Swap Pair" /></a><a
-                    href="https://https://app-qubic-andy217-devs-projects.vercel.app//?fromChain=BITCOIN&amp;toChain=LITECOIN&amp;from=BTC&amp;amount=1&amp;to=LTC"
+                    href="https://app-qubic-andy217-devs-projects.vercel.app/?fromChain=BITCOIN&amp;toChain=LITECOIN&amp;from=BTC&amp;amount=1&amp;to=LTC"
                     target="_blank" rel="noreferrer" class="style_rubicSafe__popular-pairs-link__eFHbK"><img
                       src="/images/rubic-safe/btc-ltc.png" alt="Swap Pair" /></a></div>
                 <div><a
-                    href="https://https://app-qubic-andy217-devs-projects.vercel.app//?fromChain=BITCOIN&amp;toChain=ETH&amp;from=BTC&amp;amount=1&amp;to=ETH"
+                    href="https://app-qubic-andy217-devs-projects.vercel.app/?fromChain=BITCOIN&amp;toChain=ETH&amp;from=BTC&amp;amount=1&amp;to=ETH"
                     target="_blank" rel="noreferrer" class="style_rubicSafe__popular-pairs-link__eFHbK"><img
                       src="/images/rubic-safe/btc-eth.png" alt="Swap Pair" /></a><a
-                    href="https://https://app-qubic-andy217-devs-projects.vercel.app//?fromChain=SOLANA&amp;toChain=ETH&amp;from=SOL&amp;amount=10&amp;to=ETH"
+                    href="https://app-qubic-andy217-devs-projects.vercel.app/?fromChain=SOLANA&amp;toChain=ETH&amp;from=SOL&amp;amount=10&amp;to=ETH"
                     target="_blank" rel="noreferrer" class="style_rubicSafe__popular-pairs-link__eFHbK"><img
                       src="/images/rubic-safe/sol-eth.png" alt="Swap Pair" /></a></div>
-              </div><a href="https://https://app-qubic-andy217-devs-projects.vercel.app//" target="_blank" rel="noreferrer"
+              </div><a href="https://app-qubic-andy217-devs-projects.vercel.app/" target="_blank" rel="noreferrer"
                 class="style_rubicSafe__button__0NwSq">Swap Now</a>
             </div>
           </div>
