--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
           <div class="style_header__nav-container__mRAW7">
             <nav class="style_header__nav__sprpC">
               <div class="style_header__nav-links__v5V1y"><a href="/staking" rel="noreferrer" target="_self"
-                  class="style_header__nav-link__Coo9p">Staking</a><a href="https://docs.crystalballsai.xyz"
+                  class="style_header__nav-link__Coo9p">Staking</a><a href="https://mighty-2.gitbook.io/qubic"
                   rel="noreferrer" target="_blank" class="style_header__nav-link__Coo9p">Docs</a><a
                   href="https://t.me" rel="noreferrer" target="_blank"
                   class="style_header__nav-link__Coo9p">Contact Us</a></div>
@@ -468,7 +468,7 @@
           </div>
           <div class="style_screen__buttons__mjTCS"><button
               class="style_screen__button__Ir4Yd style_screen__button-launchApp__iJo1n">Launch App</button><a
-              href="https://docs.crystalballsai.xyz/" target="_blank" rel="noreferrer"
+              href="https://mighty-2.gitbook.io/qubic/" target="_blank" rel="noreferrer"
               class="style_screen__button__Ir4Yd style_screen__button-startBuilding__WWWC6">Learn more</a></div>
         </div><video autoPlay loop muted playsInline poster="/video/header-animation.png"
           class="style_screen__background-cube__9F8CM">
@@ -548,9 +548,9 @@
                 href="https://app-qubic-andy217-devs-projects.vercel.app/?fromChain=TAIKO&amp;toChain=ARBITRUM&amp;from=ETH&amp;to=ETH&amp;amount=1"
                 target="_blank" rel="noreferrer"><img src="/images/bridge-crypto/taiko.png" alt="Bridged chain"
                   class="style_network__icon__pM_lV" /></a><span class="style_network__title__RXu6y">Taiko</span></div>
-            <a href="https://docs.crystalballsai.xyz/rubic/rubics-ecosystem" target="_blank" rel="noreferrer"
+            <a href="https://mighty-2.gitbook.io/qubic/rubic/rubics-ecosystem" target="_blank" rel="noreferrer"
               class="style_link_desktop__6p8Nh">AND MORE</a>
-          </div><a href="https://docs.crystalballsai.xyz/rubic/rubics-ecosystem" target="_blank" rel="noreferrer"
+          </div><a href="https://mighty-2.gitbook.io/qubic/rubic/rubics-ecosystem" target="_blank" rel="noreferrer"
             class="style_link_mobile__yS1ZS">AND MORE</a>
         </div>
         <div class="style_gradient__right__Hv63T"><svg width="417" height="451" viewBox="0 0 417 451" fill="none"
@@ -693,7 +693,7 @@
                 minutes.</span><img src="/images/technology-widget.png" alt="Widget"
                 class="style_technology__card-widget-image__TT0k9" />
             </a></div>
-          <div class="style_technology__buttons__I_A71"><a href="https://docs.crystalballsai.xyz/" target="_blank"
+          <div class="style_technology__buttons__I_A71"><a href="https://mighty-2.gitbook.io/qubic/" target="_blank"
               rel="noreferrer" class="style_technology__button__yCnvV">Learn more</a><a href="https://t.me"
               target="_blank" rel="noreferrer"
               class="style_technology__button__yCnvV style_technology__button_outline__6ot2Y">Contact Us</a></div>
@@ -846,7 +846,7 @@
                     class="style_grantsAndAudits__name__SaAMv style_grantsAndAudits__incubation-name__nxha5">Web3 <br />
                     Incubation <br /> Program</span><img src="icons/audits/sonynetwork.png" alt="SonyNetwork"
                     class="style_grantsAndAudits__icon__Z7nOA style_grantsAndAudits__incubation-icon__G3uSB" /></a>
-              </div><a href="https://docs.crystalballsai.xyz/legal-documentation/mixbytes-audit" target="_blank"
+              </div><a href="https://mighty-2.gitbook.io/qubic/legal-documentation/mixbytes-audit" target="_blank"
                 rel="noreferrer"
                 class="style_grantsAndAudits__list-item__GLXGU style_grantsAndAudits__list-audits-item__PANem style_grantsAndAudits__list-mixbytes__V64jD">
                 <h2 class="style_grantsAndAudits__title__zkgv_">Audits</h2>
@@ -968,7 +968,7 @@
         </div>
       </section>
       <footer class="style_footer__zvwtM">
-        <div class="style_footer__buttons__XAyWl"><a href="https://docs.crystalballsai.xyz"
+        <div class="style_footer__buttons__XAyWl"><a href="https://mighty-2.gitbook.io/qubic"
             target="_blank" rel="noreferrer" class="style_footer__buttons-documentation__u15_v">Documentation</a></div>
         <div class="style_footer__wrapper__L4rS8">
           <div class="style_footer__gradient_blue__IRAjW"><svg width="1440" height="500" viewBox="0 0 1440 895"
@@ -1012,7 +1012,7 @@
                   </a><a href="https://t.me" target="_blank" rel="noreferrer"
                     class="style_social-links__item__jiX8v">
                     <div class="style_social-links__item-icon__OZwMA"></div><span>Telegram</span>
-                  </a><a href="https://docs.crystalballsai.xyz/" target="_blank" rel="noreferrer"
+                  </a><a href="https://mighty-2.gitbook.io/qubic/" target="_blank" rel="noreferrer"
                     class="style_social-links__item__jiX8v">
                     <div class="style_social-links__item-icon__OZwMA"></div><span>Docs</span>
                   </a></nav>
@@ -1020,7 +1020,7 @@
               <div><span class="style_footer__title__g9zhm">Quick links</span>
                 <nav class="style_footer__nav__drfud"><a target="_blank" rel="noreferrer" href="/team"
                     class="style_footer__nav-link__ADVQO">Team</a><a target="_blank" rel="noreferrer"
-                    href="https://docs.crystalballsai.xyz/rubic/security"
+                    href="https://mighty-2.gitbook.io/qubic/rubic/security"
                     class="style_footer__nav-link__ADVQO">Security</a><a target="_blank" rel="noreferrer"
                     class="style_footer__nav-link__ADVQO">Statistics</a><a target="_blank" rel="noreferrer"
                     href="https://drive.google.com/drive/folders/1pBthXfxfV4pcvAvWZT7Yv8w5M9K8-wta"
@@ -1028,7 +1028,7 @@
                     href="/cdn-cgi/l/email-protection#f0838580809f8284b08285929993de96999e919e9395" target="_blank"
                     rel="noreferrer" class="style_footer__nav-link__ADVQO">Contact Us</a><a href="/ecosystem"
                     target="_blank" rel="noreferrer" class="style_footer__nav-link__ADVQO">Ecosystem</a><a
-                    href="https://docs.crystalballsai.xyz/rubic/roadmap" target="_blank" rel="noreferrer"
+                    href="https://mighty-2.gitbook.io/qubic/rubic/roadmap" target="_blank" rel="noreferrer"
                     class="style_footer__nav-link__ADVQO">Roadmap</a></nav>
               </div>
               <div><span class="style_footer__title__g9zhm">Products</span>
