--- a/staking/index.html
+++ b/staking/index.html
@@ -745,7 +745,7 @@
                     class="style_header__nav-link__Coo9p"
                     >Staking</a
                   ><a
-                    href="https://docs.crystalballsai.xyz"
+                    href="https://mighty-2.gitbook.io/qubic"
                     rel="noreferrer"
                     target="_blank"
                     class="style_header__nav-link__Coo9p"
@@ -1021,7 +1021,7 @@
                   class="style_screen__button__3MQVo"
                   ><span>Stake!</span></a
                 ><a
-                  href="https://docs.crystalballsai.xyz"
+                  href="https://mighty-2.gitbook.io/qubic"
                   target="_blank"
                   rel="noreferrer"
                   class="style_screen__button__3MQVo"
@@ -1064,7 +1064,7 @@
           </div>
           <div class="style_features__container__MG_Mg">
             <a
-              href="https://docs.crystalballsai.xyz"
+              href="https://mighty-2.gitbook.io/qubic"
               target="_blank"
               rel="noreferrer"
               class="style_features__button__JbRwh"
@@ -1157,7 +1157,7 @@
               </section>
             </div>
             <a
-              href="https://docs.crystalballsai.xyz"
+              href="https://mighty-2.gitbook.io/qubic"
               target="_blank"
               rel="noreferrer"
               style="margin-top: 60px"
@@ -1463,7 +1463,7 @@
         <footer class="style_footer__zvwtM">
           <div class="style_footer__buttons__XAyWl">
             <a
-              href="https://docs.crystalballsai.xyz"
+              href="https://mighty-2.gitbook.io/qubic"
               target="_blank"
               rel="noreferrer"
               class="style_footer__buttons-documentation__u15_v"
@@ -1593,7 +1593,7 @@
                       ><div class="style_social-links__item-icon__OZwMA"></div>
                       <span>Telegram</span></a
                     ><a
-                      href="https://docs.crystalballsai.xyz/"
+                      href="https://mighty-2.gitbook.io/qubic/"
                       target="_blank"
                       rel="noreferrer"
                       class="style_social-links__item__jiX8v"
@@ -1614,7 +1614,7 @@
                     ><a
                       target="_blank"
                       rel="noreferrer"
-                      href="https://docs.crystalballsai.xyz/rubic/security"
+                      href="https://mighty-2.gitbook.io/qubic/rubic/security"
                       class="style_footer__nav-link__ADVQO"
                       >Security</a
                     ><a
@@ -1642,7 +1642,7 @@
                       class="style_footer__nav-link__ADVQO"
                       >Ecosystem</a
                     ><a
-                      href="https://docs.crystalballsai.xyz/rubic/roadmap"
+                      href="https://mighty-2.gitbook.io/qubic/rubic/roadmap"
                       target="_blank"
                       rel="noreferrer"
                       class="style_footer__nav-link__ADVQO"
